# FTP-Client-Server-GUI

./: README.md
clientGUI/: CMakeLists.txt  client.cpp  client.hpp  clientGUI.qmlproject  qmlmodules  qtquickcontrols2.conf
clientGUI/content/: App.qml  CMakeLists.txt  ChooseDir.qml  Greeter.qml  StatusBar.qml  Upload.qml
clientGUI/imports/: CMakeLists.txt
clientGUI/imports/clientGUI/: CMakeLists.txt  Constants.qml  qmldir
clientGUI/imports/clientGUI/designer/: plugin.metainfo
clientGUI/src/: app_environment.h  import_qml_plugins.h  main.cpp
serverGUI/: CMakeLists.txt  fileListModel.cpp  fileListModel.hpp  qtquickcontrols2.conf  server.cpp  server.hpp  serverGUI.qmlproject
serverGUI/.cache/clangd/index/: app_environment.h.F6A344318616D11C.idx  fileListModel.cpp.055D601594F323EB.idx  fileListModel.hpp.986E2B9282DC659B.idx  import_qml_components_plugins.h.DBCF1F4348A4003C.idx  import_qml_plugins.h.8897684852CF9232.idx  main.cpp.F973CE1ED6BFA89F.idx  server.cpp.31A860C2E70D3FE5.idx  server.hpp.68CAB27B62BDE8B4.idx
serverGUI/content/: App.qml  CMakeLists.txt  Greeter.qml  StatusBar.qml  Upload.qml
serverGUI/imports/: CMakeLists.txt
serverGUI/imports/serverGUI/: CMakeLists.txt  qmldir
serverGUI/imports/serverGUI/designer/: plugin.metainfo
serverGUI/src/: import_qml_plugins.h  main.cpp
shared_resources/include/: client.hpp  network.hpp  platform.hpp  threadpool.hpp
shared_resources/qml/: Constants.qml  qmlmodules
shared_resources/src/: client.cpp  network.cpp  platform.cpp  threadpool.cpp
